// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag when prop href is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with class active when prop href and active is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={true}
  className="btn btn-primary active"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with class pull-right when prop href and pullRight is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary pull-right"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with id when prop href and id is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  id="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with label when prop href and label is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
>
  test
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with name when prop href and name is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  name="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a button with icon and label inside a span inside an anchor tag when prop href, label and icon is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
>
  
	
  <i
    aria-hidden="true"
    className="material-icons"
  >
    test
  </i>
  <span>
    test
  </span>
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button with icon inside an anchor tag when prop href and icon is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
>
  
	
  <i
    aria-hidden="true"
    className="material-icons"
  >
    test
  </i>
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button with specified size inside an anchor tag when prop href and size is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-size-test"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a disabled button inside an anchor tag when prop href and disabled is provided 1`] = `
<a
  active={null}
  aria-disabled={true}
  aria-pressed={null}
  className="btn btn-primary disabled"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex="-1"
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a full width button inside an anchor tag when prop href and fullWidth is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-block"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Anchor tag: renders a loading button inside an anchor tag when prop href and loading is provided 1`] = `
<a
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary loading"
  disabled={null}
  href="test"
  onClick={[Function]}
  role="button"
  tabIndex={null}
  type={null}
/>
`;

exports[`Component: Button -  Button tag: renders a button with a label when prop label is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
>
  test
</button>
`;

exports[`Component: Button -  Button tag: renders a button with an icon when prop icon is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
>
  
		
  <i
    aria-hidden="true"
    className="material-icons"
  >
    test
  </i>
  
		
  
	
</button>
`;

exports[`Component: Button -  Button tag: renders a button with class active when prop active is provided 1`] = `
<button
  active=""
  aria-disabled={null}
  aria-pressed={true}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with class pull-right when prop pullRight is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary pull-right"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with icon and label when prop icon and label is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
>
  
		
  <i
    aria-hidden="true"
    className="material-icons"
  >
    icon
  </i>
  
		
  <span>
    test
  </span>
  
	
</button>
`;

exports[`Component: Button -  Button tag: renders a button with specified size when prop size is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-size-test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified id when prop id is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  id="test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified name when prop name is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  name="test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified type when prop btnType is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="test"
/>
`;

exports[`Component: Button -  Button tag: renders a disabled button when prop disabled is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={true}
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a full width button when prop fullWidth is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-block"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a loading button when prop loading is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary loading"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a primary button and defaults to type='button' when no btnType prop is provided 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button inside an input tag and defaults to type='button' when prop input is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button inside an input tag with value attribute when prop input and value is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  defaultValue="test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with class active inside an input tag when prop input and active is provided 1`] = `
<input
  active=""
  aria-disabled={null}
  aria-pressed={true}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with class pull-right inside an input tag when prop input and pullRight is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary pull-right"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with specified size inside an input tag when prop input and size is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-size-test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified id inside an input tag when prop input and id is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  id="test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified name inside an input tag when prop input and name is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  name="test"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified type inside an input tag when prop input and btnType is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  role={null}
  tabIndex={null}
  type="test"
/>
`;

exports[`Component: Button -  Input tag: renders a disabled button inside an input tag when prop input and disabled is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary"
  disabled={true}
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a full width button inside an input tag when prop input and fullWidth is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary btn-block"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a loading button inside an input tag when prop input and loading is provided 1`] = `
<input
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn btn-primary loading"
  role={null}
  tabIndex={null}
  type="button"
/>
`;

exports[`Component: Button -  prop type is marked as required 1`] = `
<button
  active={null}
  aria-disabled={null}
  aria-pressed={null}
  className="btn"
  role={null}
  tabIndex={null}
  type="button"
/>
`;
